@@ -1,18 +1,19 @@
 Brazilian Portuguese: Marcos A.T. Silva
 Danish: a0peter 
 Dutch: Olaf
-French: Lionel Roubeyrie <lionel.roubeyrie@gmail.com>
+French: Lionel Roubeyrie <lionel.roubeyrie@gmail.com>, Ronan Jouchet
 Catalan: David Pinilla (DPini) <Davidpini@gmail.com>, Josep Sànchez <josep.sanchez@ubuntu.cat>
 German: Mario Kemper <mario.kemper@googlemail.com>, Funatiker <koehlerx@googlemail.com>, Rene Hennig <shifty@my-united.net>
 Italian: Diego Pierotto
 Korean: Lv5doraki, Mr.Dust <like.a.dust@gmail.com>
 Norwegian Bokmal: Wolven
 Polish: mmiicc <mpredotka@gmail.com>
-Russian: Michael Kogan (PhotonX) <michael.kogan@gmx.net>
+Russian: Michael Kogan (PhotonX) <michael.kogan@gmx.net>, Leolik
 Serbian: Vladimir Lazic <vlazic@gmail.com>
-Simplified Chinese: c_C <midnacc@gmail.com>, kaiman <kaigfm@gmail.com> 
+Simplified Chinese: c_C <midnacc@gmail.com>, kaiman <kaigfm@gmail.com>, Aron Xu 
 Spanish: Nicolas Espina Tacchetti <nicolasespina@gmail.com>
 Swedish: eyerouge
+Thai: prasopsuk
 Traditional Chinese: Tse-Hsien Chiang <jackblackevo@gmail.com>, Ev Law <tyuuuu2001@yahoo.com.hk> 
 Ukrainian: Serhey Kusyumoff <sergemine@gmail.com>, mfx, Incubus-Grauen <incubusgrauen@yahoo.com>
 
