@@ -1,6 +1,7 @@
 gscrot (0.60~ppa1) intrepid; urgency=low
 
-  * added feature "grab window-section"
+  * added new feature "grab window-section"
+  * added settings-profiles 
   * added new plugin interface
   * added new plugins
     -- pdf-export
@@ -14,7 +15,7 @@ gscrot (0.60~ppa1) intrepid; urgency=low
     -- new menu entries
     -- settings moved to menu  
 
- -- Mario Kemper <mario.kemper@googlemail.com> Tue, 16 Sep 2008 01:43:31 +0200 
+ -- Mario Kemper <mario.kemper@googlemail.com>  Sun, 21 Sep 2008 15:12:11 +0200 
 
 gscrot (0.51.1~ppa3) intrepid; urgency=low
 
